// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should render Text with default properties 1`] = `
<Text
  color="hsla(217, 56%, 17%, 1)"
  fontFamily="Lato"
  fontSize="15px"
  fontStyle="normal"
  fontWeight={400}
  lineHeight="24px"
  style={
    Array [
      Object {
        "color": "hsla(217, 56%, 17%, 1)",
        "fontFamily": "Lato",
        "fontSize": 15,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
        "textAlign": "left",
        "textDecorationLine": "none",
      },
    ]
  }
  textAlign="left"
  textDecorationLine="none"
>
  Displaying some text
</Text>
`;

exports[`<Text /> should render Text with variant "body" 1`] = `
<Text
  color="hsla(217, 56%, 17%, 1)"
  fontFamily="Lato"
  fontSize="15px"
  fontStyle="normal"
  fontWeight={700}
  lineHeight="24px"
  numberOfLines={3}
  style={
    Array [
      Object {
        "color": "hsla(217, 56%, 17%, 1)",
        "fontFamily": "Lato",
        "fontSize": 15,
        "fontStyle": "normal",
        "fontWeight": "700",
        "lineHeight": 24,
        "textAlign": "left",
        "textDecorationLine": "none",
      },
    ]
  }
  textAlign="left"
  textDecorationLine="none"
>
  Displaying some text
</Text>
`;

exports[`<Text /> should render Text with variant "caption" 1`] = `
<Text
  color="hsla(217, 56%, 17%, 1)"
  fontFamily="Lato"
  fontSize="15px"
  fontStyle="normal"
  fontWeight={700}
  lineHeight="24px"
  style={
    Array [
      Object {
        "color": "hsla(217, 56%, 17%, 1)",
        "fontFamily": "Lato",
        "fontSize": 15,
        "fontStyle": "normal",
        "fontWeight": "700",
        "lineHeight": 24,
        "textAlign": "left",
        "textDecorationLine": "none",
      },
    ]
  }
  textAlign="left"
  textDecorationLine="none"
>
  Displaying some text
</Text>
`;

exports[`<Text /> should render highContrast Text with variant "body" 1`] = `
<Text
  color="hsla(0, 0%, 100%, 1)"
  fontFamily="Lato"
  fontSize="15px"
  fontStyle="normal"
  fontWeight={700}
  lineHeight="24px"
  numberOfLines={3}
  style={
    Array [
      Object {
        "color": "hsla(0, 0%, 100%, 1)",
        "fontFamily": "Lato",
        "fontSize": 15,
        "fontStyle": "normal",
        "fontWeight": "700",
        "lineHeight": 24,
        "textAlign": "left",
        "textDecorationLine": "none",
      },
    ]
  }
  textAlign="left"
  textDecorationLine="none"
>
  Displaying some text
</Text>
`;
